XXX (XXX)
* Added Raca::Container#temp_upload_url
* Renamed Raca::Container#expiring_url to Raca::Container#temp_url
  * the old method still exists for now but is deprecated
* Expand Raca::Container#metadata to include custom metadata
* Added raca::Container#set_metadata
* For non regioned APIs (like Cloud DNS) the region argument to Raca::Account#public_endpoint
  can be left off

v0.3.3 (26th April 2014)
* Added a User-Agent header to all requests
* Remove automatic retries after a rackspace timeout
* Bugfix: correctly upload files > 5Gb
* Bugfix: Use the correct ETag header for uploads

v0.3.2 (23rd April 2014)
* Bugfix: correctly handle a 401 response when a stale token is used for
  a streaming PUT

v0.3.1(14th April 2014)
* Add the rackspace transaction ID to HTTP exceptions

v0.3.0 (12th April 2014)
* Added an optional headers param to Raca::Container#upload
* Added the details option to Raca::Container#list
* Fixed Raca::Container#list to return all items for containers that
  contain more than 10,000 objects
* Fixed Raca::Container to work with container and object names that
  need to be escaped (spaces, some punctuation, utf8 characters, etc)
* Refactored internal management of HTTP requests to reduce duplication
  and improve testability. There should be no visible change to the public
  API of raca

v0.2.0 (19th March 2014)
* Breaking API changes to Raca::Servers and Raca:Server
  * Moved the create() method from Server to Servers
* Added Raca::Account#service_names
* Stop returning HTTP response objects from many methods on Raca::Container
* Added some custom error classes for common issues (timeouts, 404s, etc) to
  make recovering easier for the user

v0.1.1 (25th February 2014)
* Add Raca::Container#object_metadata

v0.1.0 (24th February 2014)
* Initial Release