@@ -6,4 +6,6 @@ require 'raca/containers'
 require 'raca/http_client'
 require 'raca/server'
 require 'raca/servers'
+require 'raca/user'
+require 'raca/users'
 require 'raca/util'
